--- a/MauiSamples.csproj
+++ b/MauiSamples.csproj
@@ -38,6 +38,12 @@
         <AndroidSigningStorePass></AndroidSigningStorePass>
     </PropertyGroup>
 
+    <PropertyGroup Condition="$(TargetFramework.Contains('-windows')) and '$(Configuration)' == 'Release'">
+        <GenerateAppxPackageOnBuild>true</GenerateAppxPackageOnBuild>
+        <AppxPackageSigningEnabled>true</AppxPackageSigningEnabled>
+        <PackageCertificateThumbprint>C782F58656527E3DFF03B7C53FB7638CC6127BC4</PackageCertificateThumbprint>
+    </PropertyGroup>
+    
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
