--- a/MauiSamples.csproj
+++ b/MauiSamples.csproj
@@ -61,5 +61,11 @@
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
+    
+	<ItemGroup>
+	  <MauiXaml Update="Pages\BatteryPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
 
 </Project>
