WebViewページを作成する

--- a/MauiSamples.csproj
+++ b/MauiSamples.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="Pages\BatteryPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\WebViewPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
